--- a/css/styles.css
+++ b/css/styles.css
@@ -711,9 +711,18 @@ input:checked + .slider:before {
 		-webkit-linear-gradient(left, #ddd 50%, var(--main-red-color) 50%);
 }
 
-@media screen and (min-width: 768px) {
-	 {
-		width: 100%;
-		height: 100%;
+/* Media Query for Mobile */
+@media screen and (max-width: 767px) {
+	.radial-progress-bar {
+	  width: 100%;
+	  height: auto;
+	  min-width: unset;
 	}
+  
+	.radial-progress-bar .overlay {
+	  width: 80%;
+	  height: 80%;
+	  padding-top: 80%;
+	}
+
 }
