--- a/css/styles.css
+++ b/css/styles.css
@@ -715,3 +715,18 @@ input:checked + .slider:before {
 	background-image: -webkit-linear-gradient(left, var(--main-red-color) 50%, transparent 50%),
 		-webkit-linear-gradient(left, #ddd 50%, var(--main-red-color) 50%);
 }
+
+/* Media Query for Mobile */
+@media screen and (max-width: 767px) {
+	.radial-progress-bar {
+	  width: 60%; /* Adjust as needed for smaller screens */
+	  /* height: auto; */
+	  min-width: unset;
+	}
+  
+	.overlay {
+	  width: 60%; /* Adjust as needed for smaller screens */
+	  /* height: auto; */
+	  padding-top: 100%; /* Maintain the aspect ratio for a circle */
+	}
+  }
